Squashed in April 2024.
Add MVP EigenDA Support

Features:
* Supports writing framesets to EigenDA, and then posting frameset EigenDA "references"
  to L1 calldata.
* If the write of a frameset to EigenDA fails, then the original
  frameset is written to L1 calldata. This graceful fallback is
  supported by a new wrapper type that encapsulates the union type between
  raw frameset data and a frameset reference, and is implemented using
  protocol buffers.
* Reading is transparently handled on the derivation pipeline side.

Caveats:
* The introduction of the concept of external data availability probably
  demands a refactor and reorganization of some logic. This changeset
  does not attempt any of this, instead inserting hacky logic in sometimes
  undesirable places to achieve this the intended proof-of-concept goal.
* op-programs in now broken an needs update to support "off-chain" DA.
* op-e2e is also broken and will need fixing before end-to-end tests
  can be run successfully.

Add debugging for devnet script

Add .go-version file

Merge pull request #5 from 0xyjk/fix/log_request_payload

fix: log request payload

Add deployment config for eigenda-poc-preprod

Change endpoint for retriever

Upgrade API EigenDA dependency to v0.3.0

Accept finalized blobs. Update grpc dial options

feat: support 1.7.2

Fix EigenDA imports

chore: bump eigenda api to 0.6.0

fix(eigenda): make blobs bn254 compat

Bump EigenDA version to v0.6.1

feat(eigenda): support prefix derivation

Wait until blob finalization to submit inbox transactions

--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       --p2p.listen.ip=0.0.0.0
       --p2p.listen.tcp=9003
       --p2p.listen.udp=9003
-      --p2p.scoring.peers=light
+      --p2p.scoring=light
       --p2p.ban.peers=true
       --snapshotlog.file=/op_log/snapshot.log
       --p2p.priv.path=/config/p2p-node-key.txt
@@ -228,6 +228,10 @@ services:
       - "3100:3100"
     volumes:
       - "da_data:/data"
+    environment:
+      DA_SERVER_EIGENDA_RPC: host.docker.internal:32003
+      DA_SERVER_EIGENDA_STATUS_QUERY_INTERVAL: "5s"
+      DA_SERVER_EIGENDA_STATUS_QUERY_TIMEOUT: "30s"
 
   sentinel:
     image: quarry/sentinel # TODO(10141): We need a public image for this (sentinel is out of repo)
