--- a/packages/contracts-bedrock/package.json
+++ b/packages/contracts-bedrock/package.json
@@ -20,16 +20,16 @@
     "autogen:invariant-docs": "npx tsx scripts/autogen/generate-invariant-docs.ts",
     "test": "pnpm build:go-ffi && forge test",
     "test:kontrol": "./test/kontrol/scripts/run-kontrol.sh",
-    "genesis": "./scripts/generate-l2-genesis.sh",
+    "genesis": "./scripts/genesis/generate-l2-genesis.sh",
     "coverage": "pnpm build:go-ffi && forge coverage",
     "coverage:lcov": "pnpm build:go-ffi && forge coverage --report lcov",
-    "deploy": "./scripts/deploy.sh",
+    "deploy": "./scripts/deploy/deploy.sh",
     "gas-snapshot:no-build": "forge snapshot --match-contract GasBenchMark",
-    "statediff": "./scripts/statediff.sh && git diff --exit-code",
+    "statediff": "./scripts/deploy/statediff.sh && git diff --exit-code",
     "gas-snapshot": "pnpm build:go-ffi && pnpm gas-snapshot:no-build",
     "snapshots": "npx tsx scripts/autogen/generate-snapshots.ts && ./test/kontrol/scripts/make-summary-deployment.sh",
     "snapshots:check": "./scripts/checks/check-snapshots.sh",
-    "semver-lock": "forge script scripts/SemverLock.s.sol",
+    "semver-lock": "forge script scripts/autogen/SemverLock.s.sol",
     "validate-deploy-configs": "./scripts/checks/check-deploy-configs.sh",
     "validate-spacers:no-build": "npx tsx scripts/checks/check-spacers.ts",
     "validate-spacers": "pnpm build && pnpm validate-spacers:no-build",
