Add l1 beacon endpoint and fix txpool command

--- a/boba-community/.env.example
+++ b/boba-community/.env.example
@@ -1,3 +1,7 @@
+# L1 beacon chain RPC URL
+ETH2_HTTP=
+
+# optional
 # erigon client version
 # The default value is the latest version of erigon
 ERIGON_VERSION=
