--- a/boba-community/docker-compose-op-mainnet.yml
+++ b/boba-community/docker-compose-op-mainnet.yml
@@ -19,7 +19,7 @@ services:
       --authrpc.vhosts=*
       --authrpc.jwtsecret=/config/jwt-secret.txt
       --http.api=eth,debug,net,engine,web3
-      --rollup.disabletxpoolgossip=true
+      --txpool.gossip.disable=true
       --rollup.sequencerhttp=https://mainnet.optimism.io
       --db.size.limit=8TB
     ports:
@@ -35,6 +35,7 @@ services:
     command: >
       op-node
       --l1=${ETH1_HTTP:-https://ethereum.publicnode.com}
+      --l1.beacon=${ETH2_HTTP}
       --l2=http://l2:8551
       --l2.jwt-secret=/config/jwt-secret.txt
       --network=mainnet
