--- a/boba-community/.env.example
+++ b/boba-community/.env.example
@@ -14,3 +14,9 @@ OP_NODE_VERSION=
 # L1 RPC URL
 # The default value is https://sepolia.gateway.tenderly.co
 ETH1_HTTP=
+# Legacy L2 HTTP PORT
+# The default value is 8545
+LEGACY_L2_HTTP_PORT=
+# Legacy L2 WS PORT
+# The default value is 8546
+LEGACY_L2_WS_PORT=
