--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,7 +359,12 @@ jobs:
                 command: |
                   ./ops/scripts/ci-docker-tag-op-stack-release.sh <<parameters.registry>>/<<parameters.repo>> $CIRCLE_TAG $CIRCLE_SHA1
       - when:
-          condition: "<<parameters.publish>>"
+          condition:
+            and:
+              - or:
+                - "<<parameters.publish>>"
+                - "<<parameters.release>>"
+              - equal: [develop, << pipeline.git.branch >>]
           steps:
             - gcp-oidc-authenticate:
                 service_account_email: GCP_SERVICE_ATTESTOR_ACCOUNT_EMAIL
