feat: add service for creating and relaying withdrawals
Adds a service for automatically creating and relaying withdrawals.
Service is designed to be used during the FPAC testing process.

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -36,6 +36,7 @@
     "url": "https://github.com/ethereum-optimism/optimism.git"
   },
   "devDependencies": {
+    "@eth-optimism/common-ts": "workspace:^",
     "@ethersproject/abstract-provider": "^5.7.0",
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ethersproject/transactions": "^5.7.0",
