--- a/packages/boba/subgraphs/package.json
+++ b/packages/boba/subgraphs/package.json
@@ -2,6 +2,7 @@
   "name": "subgraphs",
   "version": "0.1.0",
   "scripts": {
-    "deploy:goldsky": "goldsky subgraph deploy light-bridge/v1 --from-abi ./subgraph.json"
+    "deploy:goldsky": "goldsky subgraph deploy light-bridge/v1 --from-abi ./subgraph.json",
+    "deploy:goldsky:dao": "goldsky subgraph deploy dao/v2 --from-abi ./dao.json"
   }
 }
