op-program: Run new compat tests
Adds capture-sepolia-ecotone to list of data sets to capture. The verify isn't run yet because the data wasn't captured.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1421,7 +1421,7 @@ jobs:
       - run:
           name: compat-sepolia
           command: |
-            make run-sepolia-verify
+            make verify-compat
           working_directory: op-program
 
   check-generated-mocks-op-node:
