--- a/op-program/Makefile
+++ b/op-program/Makefile
@@ -8,7 +8,6 @@ LDFLAGSSTRING +=-X github.com/ethereum-optimism/optimism/op-program/version.Vers
 LDFLAGSSTRING +=-X github.com/ethereum-optimism/optimism/op-program/version.Meta=$(VERSION_META)
 LDFLAGS := -ldflags "$(LDFLAGSSTRING)"
 
-COMPAT_DIR := temp/compat
 
 op-program: \
 	op-program-host \
@@ -56,13 +55,18 @@ capture-sepolia-ecotone: op-program-host op-program-client
 	env GO111MODULE=on go run ./verify/sepolia/cmd/sepolia.go --l1 $$SEPOLIA_L1URL --l1.beacon $$SEPOLIA_BEACON_URL --l2 $$SEPOLIA_L2URL --datadir "$(COMPAT_DIR)/sepolia-ecotone" --l1.head "0x5d491a8c1e728a4e70720c09fefdaa083681a9421cd365af85220cf8bd4448a3" --l2.start "9205715" --l2.end "9205815"
 	tar jcf "$(COMPAT_DIR)/sepolia-ecotone.tar.bz" -C "$(COMPAT_DIR)" sepolia-ecotone
 
-capture-chain-test-data: capture-mainnet-genesis capture-sepolia-delta
+capture-chain-test-data: capture-mainnet-genesis capture-sepolia-delta capture-sepolia-ecotone
 
-run-sepolia-verify: op-program-host op-program-client
-	mkdir -p "$(COMPAT_DIR)"
-	curl -L -o "$(COMPAT_DIR)/sepolia.tar.bz" https://github.com/ethereum-optimism/chain-test-data/releases/download/2024-03-01.2-branch/sepolia.tar.bz
-	tar jxf "$(COMPAT_DIR)/sepolia.tar.bz" -C "$(COMPAT_DIR)"
-	./bin/op-program `cat "$(COMPAT_DIR)/sepolia/args.txt"`
+verify-sepolia-delta: op-program-host op-program-client
+	./scripts/run-compat.sh "sepolia-delta"
+
+verify-mainnet-genesis: op-program-host op-program-client
+	./scripts/run-compat.sh "mainnet-genesis"
+
+verify-sepolia-ecotone: op-program-host op-program-client
+	./scripts/run-compat.sh "sepolia-ecotone"
+
+verify-compat: verify-sepolia-delta verify-mainnet-genesis
 
 .PHONY: \
 	op-program \
@@ -78,4 +82,5 @@ run-sepolia-verify: op-program-host op-program-client
 	capture-sepolia-ecotone \
 	capture-chain-test-data \
 	run-goerli-verify \
-	run-sepolia-verify
+	run-sepolia-verify \
+	run-compat
