--- a/packages/web3js-plugin/package.json
+++ b/packages/web3js-plugin/package.json
@@ -19,14 +19,10 @@
     }
   },
   "types": "dist/plugin.d.ts",
-  "files": [
-    "dist/",
-    "src/"
-  ],
+  "files": ["dist/", "src/"],
   "scripts": {
     "build": "tsup",
-    "lint": "prettier --check .",
-    "lint:fix": "prettier --write .",
+    "lint:fix": "biome format . --write",
     "test": "vitest --coverage",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit"
