--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
+    "@biomejs/biome": "1.6.1",
     "@changesets/changelog-github": "^0.4.8",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
@@ -56,13 +57,11 @@
     "depcheck": "^1.4.7",
     "doctoc": "^2.2.0",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.0.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-unicorn": "^50.0.1",
@@ -70,12 +69,11 @@
     "lint-staged": "15.2.0",
     "mocha": "^10.2.0",
     "nx": "18.0.4",
+    "nx-cloud": "latest",
     "nyc": "^15.1.0",
-    "prettier": "^2.8.0",
     "rimraf": "^5.0.5",
     "ts-mocha": "^10.0.0",
-    "typescript": "^5.3.3",
-    "nx-cloud": "latest"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@changesets/cli": "^2.27.1"
