--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1168,7 +1168,7 @@ jobs:
           command: |
             curl -L https://foundry.paradigm.xyz | bash
             source $HOME/.bashrc
-            foundryup --commit 0026488754512acf0fd902a0d2c90cf8a09367b0
+            foundryup
             echo 'export PATH=$HOME/.foundry/bin:$PATH' >> $BASH_ENV
             source $HOME/.bashrc
             forge --version
