--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GCP_ARTIFACT_REPOSITORY=bobanetwork-tools-artifacts
 GCP_PROJECT_ID=boba-392114
-REPO=bobanetwork/v3-anchorage
+REPO=bobanetwork/boba
